eureka/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    run: eureka
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: eureka
