eureka/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka
spec:
  rules:
  - host: eureka
    http:
      paths:
      - backend:
          serviceName: eureka
          servicePort: 8080
